--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<!-- LINK -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="css/index.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
@@ -15,19 +15,19 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light navbar-clr">
 		<div class="container-fluid me-5 ms-5">
-			<a class="navbar-brand" href="#">Woka</a>
+			<a class="navbar-brand" style="color: #11BCC7;" href="#"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item pe-5">
-						<a class="nav-link" href="#">Jelajahi</a>
+						<a class="nav-link" href="jelajahi.html">Jelajahi</a>
 					</li>
 					<li class="nav-item pe-5">
-						<a class="nav-link" href="#">Gabung Mitra</a>
+						<a class="nav-link" href="gabungMitra1.html">Gabung Mitra</a>
 					</li>
 				</ul>
 
@@ -48,13 +48,13 @@
 									</div>
 									<div class="form-outline pe-5 ps-5">
 										<button type="submit" class="btn mb-4 btn-gabung">Lanjut</button>
-										<input type="checkbox" name="" id=""> Ingat Saya &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-										<a href="#">Lupa Kata Sandi?</a>
+										<input type="checkbox" name="" id=""> Ingat Saya
+										<a href="#" class="float-end">Lupa Kata Sandi?</a>
 									</div>
 								</form>
 							</div>
 
-							<div class="modal-footer">
+							<div class="modal-footer mx-auto">
 								<p>Belum Bergabung? <a href="#">Daftar</a></p>
 							</div>
 						</div>
@@ -86,7 +86,7 @@
 								</form>
 							</div>
 
-							<div class="modal-footer">
+							<div class="modal-footer mx-auto">
 								<p>Sudah Bergabung? <a href="#">Masuk</a></p>
 							</div>
 						</div>
@@ -98,7 +98,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg col-sm-12">
-				<img src="img/woka1.png" alt="" width="82%">
+				<img src="assets/woka1.png" alt="" width="82%">
 			</div>
 			<div class="col-lg col-sm-12" style="margin-top: 15%;">
 				<div class="card">
@@ -115,7 +115,7 @@
 		</div>
 	</div>
 
-	<div class="footer">
+	<div class="footer fixed-bottom">
 		<p>Woka @ 2021, PT. Woka.</p>
 	</div>
 
