--- a/gabungMitra2.html
+++ b/gabungMitra2.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-light navbar-clr">
 	<div class="container-fluid ms-5">
-		<a class="navbar-brand" style="color: #11BCC7;" href="#"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
+        <a class="navbar-brand" style="color: #11BCC7;" href="index.html"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
 	</div>
 </nav>
 <div class="bar">
