--- a/gabungMitra4.html
+++ b/gabungMitra4.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-light navbar-clr">
 	<div class="container-fluid ms-5">
-		<a class="navbar-brand" style="color: #11BCC7;" href="#"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
+        <a class="navbar-brand" style="color: #11BCC7;" href="index.html"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
 	</div>
 </nav>
 <div class="bar">
@@ -44,7 +44,9 @@
 	</div>
 
 	<div class="row top bottom">
-		<button class="btn btn-home flex" formaction="homepage.html">Halaman Utama</button>
+		<form>
+			<button class="btn btn-home flex" formaction="homepage.html">Halaman Utama</button>
+		</form>
 	</div>
 
 	<div class="footer">
