--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light navbar-clr">
 		<div class="container-fluid me-5 ms-5">
-			<a class="navbar-brand" style="color: #11BCC7;" href="#"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
+			<a class="navbar-brand" style="color: #11BCC7;" href="index.html"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -47,7 +47,7 @@
 										<input type="password" class="form-control" placeholder="Kata Sandi"/>
 									</div>
 									<div class="form-outline pe-5 ps-5">
-										<button type="submit" class="btn mb-4 btn-gabung">Lanjut</button>
+										<button type="submit" class="btn mb-4 btn-gabung" formaction="homepage.html">Lanjut</button>
 										<input type="checkbox" name="" id=""> Ingat Saya
 										<a href="#" class="float-end">Lupa Kata Sandi?</a>
 									</div>
