--- a/gabungMitra4.html
+++ b/gabungMitra4.html
@@ -7,6 +7,7 @@
 
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="css/gabungmitra.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -15,47 +16,64 @@
 </head>
 <body>
 
-<nav class="navbar navbar-light navbar-clr">
-	<div class="container-fluid ms-5">
-        <a class="navbar-brand" style="color: #11BCC7;" href="index.html"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
-	</div>
-</nav>
-<div class="bar">
-	<p style="text-align: center;">....</p>
-</div>
-
-<div class="container">
-
-	<div class="row bottom mt-5 flex">
-		<div class="card-clr">
-			<h5 style="color: #08A0F7;"><b>Data berhasil dikirim</b></h5>
-			<p>Formulir sedang dalam tahap verifikasi.</p>
-			<p>No Pendaftaran : MT3430202108</p>
+	<nav class="navbar navbar-light navbar-clr">
+		<div class="container-fluid ms-5">
+			<a class="navbar-brand" style="color: #11BCC7;" href="index.html"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
+		</div>
+	</nav>
+	<div class="row bar flex">
+		<div class="col-lg col-sm-12 flex" style="color: #1778B0;">
+			<i class="bi bi-check-circle"></i> 
+			&nbsp;Informasi Pribadi
+		</div>
+		<div class="col-lg-1 col-sm-1 flex">
+			<b><i class="bi bi-chevron-double-right"></i></b>
+		</div>
+		<div class="col-lg col-sm-12 flex" style="color: #1778B0;">
+			<i class="bi bi-check-circle"></i>
+			&nbsp;Informasi Keahlian
+		</div>
+		<div class="col-lg-1 col-sm-1 flex">
+			<b><i class="bi bi-chevron-double-right"></i></b>
+		</div>
+		<div class="col-lg col-sm-12 flex" style="color: #1778B0;">
+			<i class="bi bi-check-circle"></i>
+			&nbsp;Keamanan
 		</div>
 	</div>
 
-	<div class="row bottom mt-5 flex">
-		<div class="card-clr2">
-			<p>Kami sedang melakukan verifikasi dan validasi data yang telah anda kirimkan.</p>
-			<p>Setelah data anda lolos verifikasi dan validasi, kami akan mengirimkan pemberitahuan melalui email atau SMS.</p>
-			<p>Jika dinyatakan lolos akun anda sebagai mitra penyedia jasa akan segera aktif dan anda dapat segera mencari pelanggan dan bertransaksi dengan aman dan nyaman.</p>
-			<p>Proses verifikasi dan validasi memakan waktu maksimal 3 x 24 jam di hari kerja.</p>
+	<div class="container">
+
+		<div class="row bottom mt-5 flex">
+			<div class="card-clr">
+				<h5 style="color: #08A0F7;"><b>Data berhasil dikirim</b></h5>
+				<p>Formulir sedang dalam tahap verifikasi.</p>
+				<p>No Pendaftaran : MT3430202108</p>
+			</div>
 		</div>
+
+		<div class="row bottom mt-5 flex">
+			<div class="card-clr2">
+				<p>Kami sedang melakukan verifikasi dan validasi data yang telah anda kirimkan.</p>
+				<p>Setelah data anda lolos verifikasi dan validasi, kami akan mengirimkan pemberitahuan melalui email atau SMS.</p>
+				<p>Jika dinyatakan lolos akun anda sebagai mitra penyedia jasa akan segera aktif dan anda dapat segera mencari pelanggan dan bertransaksi dengan aman dan nyaman.</p>
+				<p>Proses verifikasi dan validasi memakan waktu maksimal 3 x 24 jam di hari kerja.</p>
+			</div>
+		</div>
+
+		<div class="row top bottom">
+			<form>
+				<button class="btn btn-home flex" formaction="homepage.html">Halaman Utama</button>
+			</form>
+		</div>
+
+		<div class="footer">
+			<p>Woka @ 2021, PT. Woka.</p>
+		</div>
+
 	</div>
 
-	<div class="row top bottom">
-		<form>
-			<button class="btn btn-home flex" formaction="homepage.html">Halaman Utama</button>
-		</form>
-	</div>
-
-	<div class="footer">
-		<p>Woka @ 2021, PT. Woka.</p>
-	</div>
-
-</div>
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+	<!-- Option 1: Bootstrap Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
