--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
 	<body>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<div class="container-fluid">
+		<div class="container-fluid ms-3">
 			<a class="navbar-brand" style="color: #11BCC7;" href="index.html"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -33,7 +33,10 @@
 						<a class="nav-link" href="gabungMitra1.html">Gabung Mitra</a>
 					</li>
 					<li class="nav-item me-5">
-						<a class="nav-link" href="#">Pesanan</a>
+						<a class="nav-link" href="pesanan.html">Pesanan</a>
+					</li>
+					<li class="nav-item me-5">
+						<a class="nav-link" href="profileCust.html"><img src="assets/profile.PNG" class="rounded-circle" width="25px" alt=""></a>
 					</li>
 				</ul>
 			</div>
@@ -41,7 +44,7 @@
 	</nav>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light bar">
 		<div class="container-fluid">
-			<button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent2">
@@ -78,11 +81,80 @@
 		<div class="row mt-5">
 			<div class="col-lg col-sm-12 flex">
 				<div class="card" style="width: 18rem;">
-					<img src="assets/20191122_01.png" class="card-img-top" alt="...">
+					<img src="assets/20191122_01.png" class="card-img-top" alt="..." data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;">
+					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog modal-xl modal-dialog-scrollable">
+							<div class="modal-content">
+								<div class="modal-body">
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+									<div class="container-fluid">
+										<div class="row">
+											<div class="col-lg-8 col-sm-12 thumb-post">
+												<img src="assets/20191122_01.png" class="rounded" width="100%" alt="">
+											</div>
+											<div class="col-lg col-sm-12">
+												<b>Pilih jasa</b>
+												<div class="box mt-3">
+													<select class="form-select" aria-label="Default select example">
+														<option selected>Pilihan Lemari</option>
+														<option value="Lemari besar">Lemari besar</option>
+														<option value="Lemari Kecil">Lemari kecil</option>
+													</select>
+													<br>
+													<p>Harga <span class="float-end">Rp.250.000</span></p>
+													<hr>
+													<p class="mt-2">Biaya tambahan</p>
+													<div class="box">
+														Rp.0
+													</div>
+													<br>
+													<p>Total <span class="float-end">Rp.250.000</span></p>
+													<form>
+														<button type="submit" formaction="checkout1.html" class="btn btn-pesan mt-3 flex">Pesan Jasa</button>
+													</form>
+												</div>
+											</div>
+										</div>
+										<div class="row mt-4">
+											<div class="col-lg col-sm-12 thumb-post">
+												<p>
+													<span style="color: #40B2C9;">Tukang kayu</span><br>
+													<b>Perbaikan furniture kayu</b>
+												</p>
+											</div>
+											<div class="col-lg col-sm-12 thumb-post">
+												<button class="btn btn-hub">Hubungi Saya</button>
+											</div>
+										</div>
+										<div class="row mt-4">
+											<div class="col-lg-8 col-sm-12">
+												<p style="text-align: justify;">Menerima jasa perbaikan segala jenis furniture dan peralatan rumah tangga berbahan dasar kayu. Mulai dari pintu, meja, lemari, kitchen set dll. Berpengalaman lebih dari 15 tahun dibidang furniture kayu.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="modal-footer me-auto mt-3">
+									<div class="row">
+										<div class="col-lg-2">
+											<img src="assets/profile.PNG" class="rounded-circle" width="50px" alt="">
+										</div>
+										<div class="col-lg">
+											<a href="#" class="card-title" style="font-size: 15px; color: black;"><b>Maman Woodman</b></a>
+											<p style="color: red;">Bandung</p>
+										</div>
+										<div class="col-lg">
+											<p style="font-size: 14px;">- 2 Pesanan sedang dikerjakan</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+	
 					<div class="card-body">
 						<div class="row">
 							<div class="col-lg-3">
-								<img src="assets/profile.PNG" class="rounded-circle" width="100%" alt="">
+								<img src="assets/profile.PNG" class="rounded-circle" width="50px" alt="">
 							</div>
 							<div class="col-lg">
 								<a href="#" class="card-title" style="font-size: 15px; color: black;"><b>Maman Woodman</b></a>
@@ -104,7 +176,7 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-lg-3">
-								<img src="assets/profile.PNG" class="rounded-circle" width="100%" alt="">
+								<img src="assets/profile.PNG" class="rounded-circle" width="50px" alt="">
 							</div>
 							<div class="col-lg">
 								<a href="#" class="card-title" style="font-size: 15px; color: black;"><b>Edi Chainsaw</b></a>
@@ -126,7 +198,7 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-lg-3">
-								<img src="assets/profile.PNG" class="rounded-circle" width="100%" alt="">
+								<img src="assets/profile.PNG" class="rounded-circle" width="50px" alt="">
 							</div>
 							<div class="col-lg">
 								<a href="#" class="card-title" style="font-size: 15px; color: black;"><b>Tanto Yoshimura</b></a>
@@ -151,7 +223,7 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-lg-3">
-								<img src="assets/profile.PNG" class="rounded-circle" width="100%" alt="">
+								<img src="assets/profile.PNG" class="rounded-circle" width="50px" alt="">
 							</div>
 							<div class="col-lg">
 								<a href="#" class="card-title" style="font-size: 15px; color: black;"><b>Ojak Lumberjack</b></a>
@@ -173,7 +245,7 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-lg-3">
-								<img src="assets/profile.PNG" class="rounded-circle" width="100%" alt="">
+								<img src="assets/profile.PNG" class="rounded-circle" width="50px" alt="">
 							</div>
 							<div class="col-lg">
 								<a href="#" class="card-title" style="font-size: 15px; color: black;"><b>Beben Carpenter</b></a>
@@ -195,7 +267,7 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-lg-3">
-								<img src="assets/profile.PNG" class="rounded-circle" width="100%" alt="">
+								<img src="assets/profile.PNG" class="rounded-circle" width="50px" alt="">
 							</div>
 							<div class="col-lg">
 								<a href="#" class="card-title" style="font-size: 15px; color: black;"><b>Hendro Doikuno</b></a>
@@ -213,7 +285,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="bar top"></div>
+	<div class="bar mt-5"></div>
 	<div class="footer">
 		<p>Woka @ 2021, PT. Woka.</p>
 	</div>
