--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg col-sm-12">
+			<div class="col-lg col-sm-12 hide">
 				<img src="assets/woka1.png" alt="" width="82%">
 			</div>
 			<div class="col-lg col-sm-12" style="margin-top: 15%;">
@@ -105,7 +105,7 @@
 					<div class="card-body">
 						<form action="">
 							<input type="text" class="search-box" placeholder="Temukan Jasa" name="" id="">
-							<button class="find-btn" type="submit">Cari Jasa</button>
+							<button class="find-btn" type="submit" formaction="homepage.html">Cari Jasa</button>
 						</form>
 				  	</div>
 				</div>
@@ -116,7 +116,11 @@
 	</div>
 
 	<div class="footer fixed-bottom">
-		<p>Woka @ 2021, PT. Woka.</p>
+		<p>
+			<img src="assets/logofooter.png" width="25px" alt="">
+			Woka &emsp;&emsp;
+			@ 2021, PT. Woka.
+		</p>
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
