--- a/homepage.html
+++ b/homepage.html
@@ -287,7 +287,11 @@
 	</div>
 	<div class="bar mt-5"></div>
 	<div class="footer">
-		<p>Woka @ 2021, PT. Woka.</p>
+		<p>
+			<img src="assets/logofooter.png" width="25px" alt="">
+			Woka &emsp;&emsp;
+			@ 2021, PT. Woka.
+		</p>
 	</div>
 
 	<!-- Option 1: Bootstrap Bundle with Popper -->
