lagi lagi update

--- a/homepage.html
+++ b/homepage.html
@@ -81,8 +81,8 @@
 		<div class="row mt-5">
 			<div class="col-lg col-sm-12 flex">
 				<div class="card" style="width: 18rem;">
-					<img src="assets/20191122_01.png" class="card-img-top" alt="..." data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;">
-					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<img src="assets/20191122_01.png" class="card-img-top" alt="..." data-bs-toggle="modal" data-bs-target="#exampleModall" style="cursor: pointer;">
+					<div class="modal fade" id="exampleModall" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog modal-xl modal-dialog-scrollable">
 							<div class="modal-content">
 								<div class="modal-body">
@@ -123,7 +123,35 @@
 												</p>
 											</div>
 											<div class="col-lg col-sm-12 thumb-post">
-												<button class="btn btn-hub">Hubungi Saya</button>
+												<button type="button" class="btn btn-hub" data-bs-toggle="modal" data-bs-target="#exampleModal">Hubungi Saya</button>
+												<div class="modal fade modal-bg" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+													<div class="modal-dialog modal-md modal-dialog-scrollable">
+														<div class="modal-content">
+															<div class="modal-header">
+																<h5 class="modal-title" id="exampleModalLabel">Maman Woodman</h5>
+															</div>
+															<div class="modal-body">
+																<div class="chatBubble1">
+																	<p>halo.</p>
+																</div>
+																<br>
+																<div class="chatBubble2" class="mt-5">
+																	<p>halo jg.</p>
+																</div>
+															</div>
+															<form action="" method="post">
+																<div class="row">
+																	<div class="col-lg-7 col-sm-7">
+																		<input type="text" class="form-control" name="" id="">
+																	</div>
+																	<!-- <div class="col-lg col-sm">
+																		<button class="btn btn-primary">Send</button>
+																	</div> -->
+																</div>
+															</form>
+														</div>
+													</div>
+											  </div>
 											</div>
 										</div>
 										<div class="row mt-4">
