--- a/jbDesc.html
+++ b/jbDesc.html
@@ -75,9 +75,13 @@
 		</div>
 
 		<div class="row btn-area mt-5 mb-5 flex">
-			<div class="col-lg col-sm-12">
-                <form>
-                    <button class="btn btn-batal" formaction="jbPricing.html">Batalkan</button>
+			<div class="col-lg col-sm">
+				<form action="" method="GET">
+					<button class="btn btn-batal" formaction="jbPricing.html">Kembali</button>
+				</form>
+			</div>
+			<div class="col-lg col-sm">
+                <form action="" method="POST">
                     <button class="btn btn-pesan float-end" formaction="jbGaleri.html">Simpan & Lanjutkan</button>
                 </form>
 			</div>
