--- a/profileWorker.html
+++ b/profileWorker.html
@@ -85,7 +85,36 @@
 				<div class="row ms-3 me-3">
 					<div class="box">
 						<p style="font-size: 30px;">
-							<i class="bi bi-envelope"></i>
+							<p style="text-align: right;"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-envelope"></i></button></p>
+							<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+								<div class="modal-dialog modal-md modal-dialog-scrollable">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title" id="exampleModalLabel">Ucup Rodriguez</h5>
+											<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+										</div>
+										<div class="modal-body">
+											<div class="chatBubble1">
+												<p>halo.</p>
+											</div>
+											<br>
+											<div class="chatBubble2" class="mt-5">
+												<p>halo jg.</p>
+											</div>
+										</div>
+										<form action="" method="post">
+											<div class="row">
+												<div class="col-lg-7 col-sm-7">
+													<input type="text" class="form-control" name="" id="">
+												</div>
+												<!-- <div class="col-lg col-sm">
+													<button class="btn btn-primary">Send</button>
+												</div> -->
+											</div>
+										</form>
+									</div>
+								</div>
+						  </div>
 						</p>
 						<img src="assets/profile.PNG" width="30%" class="rounded-circle flex mb-3" alt="">
 						<p style="text-align: center;"><b>Ucup Rodriguez</b></p>
