--- a/jbGaleri.html
+++ b/jbGaleri.html
@@ -17,7 +17,7 @@
 <body>
 
 	<nav class="navbar navbar-light navbar-clr">
-	<div class="container-fluid ms-5">
+	<div class="container-fluid ms-3">
 		<a class="navbar-brand" style="color: #11BCC7;" href="index.html"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
 	</div>
 	</nav>
@@ -96,9 +96,13 @@
 		</div>
 
 		<div class="row btn-area mt-5 mb-5 flex">
-			<div class="col-lg col-sm-12">
-				<form>
+			<div class="col-lg col-sm">
+				<form action="" method="GET">
 					<button class="btn btn-batal" formaction="jbDesc.html">Kembali</button>
+				</form>
+			</div>
+			<div class="col-lg col-sm">
+				<form action="" method="POST">
 					<button class="btn btn-pesan float-end" formaction="jbDone.html">Simpan & Lanjutkan</button>
 				</form>
 			</div>
