--- a/jbOverview.html
+++ b/jbOverview.html
@@ -7,6 +7,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="css/jasabaru.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 <body>
 
 	<nav class="navbar navbar-light navbar-clr">
-	<div class="container-fluid ms-5">
+	<div class="container-fluid ms-3">
 		<a class="navbar-brand" style="color: #11BCC7;" href="index.html"> <img src="assets/logo.png" width="20%" alt=""> <b>Woka</b></a>
 	</div>
 	</nav>
@@ -82,9 +83,13 @@
 		</div>
 
 		<div class="row btn-area mt-5 flex">
-			<div class="col-lg col-sm-12">
-				<form>
+			<div class="col-lg col-sm">
+				<form action="" method="GET">
 					<button class="btn btn-batal" formaction="pesanan.html">Batalkan</button>
+				</form>
+			</div>
+			<div class="col-lg col-sm">
+				<form action="" method="POST">
 					<button class="btn btn-pesan float-end" formaction="jbPricing.html">Simpan & Lanjutkan</button>
 				</form>
 			</div>
