--- a/profileCust.html
+++ b/profileCust.html
@@ -201,11 +201,17 @@
       						<td>:</td>
       						<td><input type="text"/></td>
       					</tr>
+						<tr>
+							<td>&nbsp;</td>
+						</tr>
       					<tr>
       						<td>Alamat</td>
       						<td>:</td>
       						<td><input type="text"/></td>
       					</tr>
+						  <tr>
+							<td>&nbsp;</td>
+						  </tr>
       					<tr>
       						<td>Foto Profil</td>
       						<td>:</td>
